src/style.css
:root {
    --widget-background: rgb(220, 220, 220);
    --accent-color: rgb(231, 119, 88);
}

* {
    margin: 0;
    padding: 0;
    border: 0;
    font-family: sans-serif;
    font-size: 16px;
    box-sizing: border-box;
    color: rgb(65, 65, 65);
}

body {
    display: grid;
    grid-template-columns: 1.5fr 1fr;
    grid-template-rows: 32px 1fr 1fr;
    gap: 8px;
    padding: 8px;
    background-color: rgb(59, 59, 59);
}

.hidden {
    display: none !important;
}

.loading {
    position: absolute;
    background-color: rgba(0, 0, 0, 0.45);
    width: 100%;
    height: 100vh;
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: center;
}

.loading > h1 {
    font-size: 3.5rem;
    color: white;
}

.temperature, .weather, .day {
    background-color: var(--widget-background);
    padding: 8px;
}

.weather {
    grid-column: 2 / 3;
    grid-row: 1 / 3;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.weather > p:first-child {
    font-size: 3rem;
}

.weather > img {
    width: 200px;
    height: 200px;
}

.weather-humid, .weather-rain {
    font-size: 1.5rem;
}

.temperature {
    grid-column: 1 / 2;
    grid-row: 2 / 3;
    position: relative;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    gap: 8px;
}

.temperature > .name {
    font-size: 3.5rem;
    align-self: end;
    justify-self: center;

}

.temperature > .low-high {
    font-size: 1.5rem;
    justify-self: center;
}

.temperature > .temp {
    grid-column: 2 / 3;
    grid-row: 1 / 3;
    font-size: 5rem;
    justify-self: center;
    align-self: center;
    margin-bottom: 32px;
}

.temp-convert {
    font-size: 1.5rem;
    position: absolute;
    top: 4px;
    right: 4px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.temp-convert > button {
    font-size: 1.5rem;
    background-color: rgba(0,0,0,0);
    width: 32px;
    height: 32px;
}

.temp-convert > button.active {
    font-weight: bold;
}

.days {
    grid-column: 1 / 3;
    display: flex;
    gap: 8px;
}

.day {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.day-name {
    font-size: 1.5rem;
}

.day-temp {
    font-size: 2.5rem;
}

.day-icon {
    width: 128px;
    height: 128px;
}

.search {
    display: flex;
}

.search > input {
    flex-grow: 1;
    outline: none;
    height: 32px;
    padding-left: 8px;
}

.search > button {
    width: 48px;
    height: 32px;
    background-color: var(--accent-color);
}

.search img {
    width: 32px;
    height: 32px;
    transition: 0.25s;
}

.search > button:hover {
    cursor:pointer
}

.search > button:hover > img {
    filter: invert(100%);
}

footer {
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    grid-column: 1 / 3;
    height: 48px;
}

